src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Boosting_Reason__c</fullName>
        <inlineHelpText>Select the reason why the opportunity is trending up.</inlineHelpText>
        <label>Einstein - Deal Boosting Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A higher than usual number of prospect participants</fullName>
                </value>
                <value>
                    <fullName>An increase in email volume</fullName>
                </value>
                <value>
                    <fullName>Emails content</fullName>
                </value>
                <value>
                    <fullName>An increase in number of meetings</fullName>
                </value>
                <value>
                    <fullName>A higher than usual number of internal participants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Mentioned__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to add the &apos;Competitor Mentioned&apos; insight to this oppty</inlineHelpText>
        <label>Einstein - Competitor Mentioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_they_Mentioned__c</fullName>
        <inlineHelpText>What competitor did they mention?</inlineHelpText>
        <label>Einstein - Competitor they Mentioned</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_to_email__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact to email</inlineHelpText>
        <label>Einstein - Contact to Email</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Slowing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to add the &apos;Deal Slowing&apos; insight to this oppty</inlineHelpText>
        <label>Einstein - Deal Slowing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_boosting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to add the &apos;Deal Boosting&apos; insight to this oppty</inlineHelpText>
        <label>Einstein - Deal Boosting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <inlineHelpText>Body for email template</inlineHelpText>
        <label>Einstein - Email Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <inlineHelpText>Subject for the email template</inlineHelpText>
        <label>Einstein - Email Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Subject__c</fullName>
        <inlineHelpText>Subject for the last activity in the insights</inlineHelpText>
        <label>Einstein - Last Activity Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Text__c</fullName>
        <inlineHelpText>Enter the text to be displayed with the last activity in the insight</inlineHelpText>
        <label>Einstein - Last Activity Text</label>
        <length>144</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Type__c</fullName>
        <inlineHelpText>What was the last activity this insight tracked?</inlineHelpText>
        <label>Einstein - Last Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Contact__c</fullName>
        <inlineHelpText>Name of the contact who mentioned the competitor</inlineHelpText>
        <label>Einstein - Name of Contact</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to add the &apos;No Communication&apos; insight to this oppty</inlineHelpText>
        <label>Einstein - No Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Unresponsive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to display the &apos;prospect unresponsive&apos; insight on this oppty</inlineHelpText>
        <label>Einstein - Prospect Unresponsive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_engaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein - Re-engaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Slowing_Reason__c</fullName>
        <label>Einstein - Deal Slowing Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A decrease in email volume</fullName>
                </value>
                <value>
                    <fullName>Emails content</fullName>
                </value>
                <value>
                    <fullName>A decrease in number of meetings</fullName>
                </value>
                <value>
                    <fullName>A lower than usual number of internal participants</fullName>
                </value>
                <value>
                    <fullName>A lower than usual number of prospect participants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein - Task Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Consuming_Oppty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein - Time Consuming Oppty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Winning_Unlikely__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Einstein - Winning Unlikely</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>